<?xml version="1.0"?>
<package format="2">
  <name>mujoco2rviz</name>
  <version>0.0.0</version>
  <description>The mujoco2rviz package</description>

  <maintainer email="software@shadowrobot.com">Shadow Robot software team</maintainer>
  <license>Private</license>
  <author email="michal@shadowrobot.com">Michal Kramarczyk</author>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
