<?xml version="1.0"?>
<package>
  <name>mujoco_manual_tests</name>
  <version>0.0.0</version>
  <description>The mujoco_manual_tests package</description>

  <maintainer email="software@shadowrobot.com">Shadow Robot's Software Team</maintainer>
  <license>GPL</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>mujoco_ros_msgs</build_depend>
  <build_depend>mujoco_ros_control</build_depend>
  <build_depend>mujoco_ros_utils</build_depend>
  <build_depend>mujoco2rviz</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>mujoco_ros_msgs</run_depend>
  <run_depend>mujoco_ros_control</run_depend>
  <run_depend>mujoco_ros_utils</run_depend>
  <run_depend>mujoco2rviz</run_depend>
</package>
