<?xml version="1.0"?>
<package format="2">
  <name>mujoco_ros_control</name>
  <version>0.0.1</version>
  <description>The mujoco_ros_control package</description>
  <maintainer email="software@shadowrobot.com">Shadow Robot's software team</maintainer>
  <license>GPL</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- add mujoco dependencies -->
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>control_toolbox</depend>
  <depend>controller_manager</depend>
  <depend>pluginlib</depend>
  <depend>hardware_interface</depend>
  <depend>transmission_interface</depend>
  <depend>joint_limits_interface</depend>
  <depend>mujoco_ros_msgs</depend>
  <depend>urdf</depend>
  <depend>roslint</depend>
  <build_depend>liburdfdom-headers-dev</build_depend>
  <export>
    <mujoco_ros_control plugin="${prefix}/robot_hw_sim_plugin.xml"/>
  </export>
</package>

