<?xml version="1.0"?>
<package>
  <name>mujoco_ros_msgs</name>
  <version>0.0.0</version>
  <description>The mujoco_ros_msgs package</description>

  <maintainer email="software@shadowrobot.com">Shadow Robot's software team</maintainer>

  <license>GPL</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roslib</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>object_recognition_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>roslib</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>object_recognition_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
</package>
