<?xml version="1.0"?>
<package format="2">
  <name>mujoco_ros_pkgs</name>
  <version>0.0.1</version>
  <description>The mujoco_ros_pkgs package</description>
  <maintainer email="software@shadowrobot.com">Shadow Robot's software team</maintainer>
  <license>Private</license>
  <buildtool_depend>catkin</buildtool_depend>
  <export>
  </export>
</package>
