<?xml version="1.0"?>
<package>
  <name>mujoco_ros_utils</name>
  <version>0.0.1</version>
  <description>The mujoco_ros_utils package</description>

  <maintainer email="software@shadowrobot.com">Shadow Robot's software team</maintainer>

  <license>GPL</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srv</build_depend>
  <build_depend>object_recognition_msgs</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>object_recognition_msgs</run_depend>
</package>
